--- a/index.html
+++ b/index.html
@@ -5,15 +5,18 @@
         <meta charset="utf-8">
         <meta name="robots" content="all">
         <meta name="author" content="Sergey Shantaliy">
-        <meta name="description" content="Меня зовут Сергей Шанталий, я родился в 2002 году в городе Тобольск, Россия. В 2010–2021 годах я успешно окончил 11 классов Демьянской средней общеобразовательной школы. С юных лет меня привлекала веб-разработка, и я стремился стать профессионалом в этой области. В 2024–2025 годах я решил продолжить своё образование и поступил на курсы «Яндекс Практикума» по веб-разработке. Благодаря своему усердию и таланту я быстро освоил новые знания и навыки, необходимые для успешной карьеры в сфере веб-разработки. Я продолжаю развиваться в области веб-разработки, работая над различными проектами и сотрудничая с клиентами из разных стран мира. Мой опыт и знания позволяют мне создавать качественные и функциональные веб-сайты и веб-приложения, которые удовлетворяют потребности пользователей и соответствуют современным тенденциям в веб-дизайне и веб-разработке.">
+        <meta name="description" content="Hello World! Меня зовут Сергей Шанталий. Я веб-разработчик из России.">
         <meta name="keywords" content="Sergey, Shantaliy, Web, Developer, Site">
         <meta property="og:title" content="Sergey Shantaliy">
         <meta property="og:description" content="Sergey Shantaliy — Web developer.">
         <meta property="og:type" content="Website">
         <meta property="og:url" content="https://shantaliy.ru">
         <title>Sergey Shantaliy</title>
-        <link rel="stylesheet" href="style/default.css">
-        <script src="script/default.js"></script>
+        <link rel="stylesheet" href="style/body.css">
+        <link rel="stylesheet" href="style/loader.css">
+        <script src="script/loader.js"></script>
+        <link rel="stylesheet" href="style/device.css">
+        <link rel="stylesheet" href="style/index.css">
         <link rel="icon" type="image/jpg" size="16x16" href="file/symbol.jpg">
         <link rel="shortcut icon" type="image/jpg" size="16x16" href="file/symbol.jpg">
     </head>
@@ -39,7 +42,10 @@
             </nav>
         </main>
         <footer>
-            <a class="github" title="GitHub" href="https://github.com/Shantaliy" target="_blank"></a>
+            <div class="link">
+                <a class="github" title="GitHub" href="https://github.com/Shantaliy" target="_blank"></a>
+                <a class="project" title="Project" href="page/project.html"></a>
+            </div>
             <a title="Author" href="https://vk.com/shantaliy" target="_blank">© Шанталий Сергей Денисович</a>
         </footer>
     </body>
